--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1 align="left">Kevin Mej&iacutea  </h1>
-         <h2>Estudiante de Ingenier&acuteia en Sistemas Informatico</h2>
+        <h2 align="left">Estudiante de Ingenier&iacutea en Sistemas Informatico</h2>
 
 </body>
 </html>
