--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h1 align="left">Kevin Mej&iacutea  </h1>
-        <h2 align="left">Estudiante de Ingenier&iacutea en Sistemas Informatico</h2>
+	<h1 align="left">Kevin Mej&iacutea. </h1>
+        <h2 align="left">Estudiante de Ingenier&iacutea en Sistemas Informaticos.</h2>
 
 </body>
 </html>
