--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 	<h1 align="left">Kevin Mej&iacutea. </h1>
         <h2 align="left">Estudiante de Ingenier&iacutea en Sistemas Informaticos.</h2>
 <h3 align="left"> Universidad de El Salvador</h3>
+<footer>
+
+
+<h2>Sobre Mi:</h2>
+<p>Soy estudiante de Ingenieria en Sistemas Informaticos , en la Universidad de El Salvador, apasionado por la tecnologia 
+, tengo 19 a&nacuteos de edad .	
+</p>
+Contactame:
+
+kevinwjose@gmail.com
+
+	
+</footer>
 
 
 
