--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <h2>Sobre Mi:</h2>
 <p>Soy estudiante de Ingenieria en Sistemas Informaticos , en la Universidad de El Salvador, apasionado por la tecnologia 
-, tengo 19 a&nacuteos de edad .	
+, tengo 19 a&ntilde;os de edad .	
 </p>
 Contactame:
 
