--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
 
 <h2>Sobre Mi:</h2>
-<p>Soy estudiante de Ingenieria en Sistemas Informaticos , en la Universidad de El Salvador, apasionado por la tecnologia 
+<p>Soy estudiante de Ingenieria en Sistemas Informaticos , en la Universidad de El Salvador,
+apasionado por la tecnologia 
 , tengo 19 a&ntilde;os de edad .	
 </p>
+</body>
+<footer>
 Contactame:
 
 kevinwjose@gmail.com
@@ -24,7 +27,4 @@ kevinwjose@gmail.com
 	
 </footer>
 
-
-
-</body>
 </html>
