--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h1 align="left">Kevin Mej&iacutea. </h1>
+		<h1 align="left">Kevin Mej&iacutea. </h1>
         <h2 align="left">Estudiante de Ingenier&iacutea en Sistemas Informaticos.</h2>
-<h3 align="left"> Universidad de El Salvador</h3>
+		<h3 align="left"> Universidad de El Salvador</h3>
 
-   	<h2>Sobre Mi:</h2>
-<p>Soy estudiante de Ingenieria en Sistemas Informaticos , en la Universidad de El Salvador,
-apasionado por la tecnologia 
-, tengo 19 a&ntilde;os de edad .	
-</p>
+   		<h2>Sobre Mi:</h2>
+
+	<p>Soy estudiante de Ingenieria en Sistemas Informaticos , en la Universidad de El Salvador,
+	apasionado por la tecnologia 
+	, tengo 19 a&ntilde;os de edad .</p>
 
 </body>
-<footer>
-Contactame:
-<br>
-kevinwjose@gmail.com
-</footer>
+	<footer>
+		<em>Contactame:
+	<br>
+	kevinwjose@gmail.com</em>
+	</footer>
 
 </html>
